+Log de Sesiones de Usuario +COMPANY_LOGIN_BACKGROUND_URL +jpa countEntities bug fix +fix clippings ui

--- a/src/main/webapp/resources/css/loginCss.css
+++ b/src/main/webapp/resources/css/loginCss.css
@@ -10,14 +10,6 @@ body {
     padding-top: 40px;
 }
 
-body { 
-    background: url("http://www.brotec-icafal.cl/assets/images/bg-proyecto.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 .panel-default {
     opacity: 0.8;
     margin-top:30px;
@@ -66,7 +58,14 @@ body {
     margin-bottom: -1px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+
 }
+
+.form-signin input[type="text"], .form-signin input[type="password"] {
+    font-size: 16px;
+    background: #fdfdfd;
+}
+
 .form-signin input[type="password"]
 {
     margin-bottom: 10px;
